deployments/k8s/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: user-api
  namespace: user
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: user-api
    spec:
      containers:
        - name: user-api
          image: yagoluiz/user-api:v1
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 15
            timeoutSeconds: 25
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 15
            timeoutSeconds: 25
            failureThreshold: 3
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
      restartPolicy: Always
  selector:
    matchLabels:
      app: user-api

---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: user-db
  namespace: user
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-db
  template:
    metadata:
      labels:
        app: user-db
    spec:
      containers:
        - name: user-db
          image: mongo:6.0
          ports:
            - containerPort: 27017
          volumeMounts:
            - mountPath: /data/db
              name: mongo
          resources:
            requests:
              memory: "80Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
      volumes:
        - name: mongo
          emptyDir: {}
