deployments/k8s/templates/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: user-api
  namespace: user
spec:
  selector:
    app: user-api
  ports:
    - port: 8080
  type: ClusterIP

---
apiVersion: v1
kind: Service

metadata:
  name: user-db
  namespace: user
spec:
  selector:
    app: user-db
  ports:
    - port: 27017
  type: ClusterIP
